@@ -1,16 +1,9 @@
-#ifndef _LaplacesDemonCpp_mcmcamwg_H
-#define _LaplacesDemonCpp_mcmcamwg_H
+#ifndef _LaplacesDemonCpp_laplacesdemon_H
+#define _LaplacesDemonCpp_laplacesdemon_H
 
 #include <RcppArmadillo.h>
 
 RcppExport SEXP mcmcamwg(SEXP MODEL, SEXP DATA, SEXP ITERATIONS, SEXP STATUS, SEXP THINNING, SEXP SPECS, SEXP ACCEPTANCE, SEXP DEV, SEXP DIAGCOVAR, SEXP liv, SEXP MON, SEXP MO0, SEXP SCALEF, SEXP THINNED, SEXP TUNING);
-
-#endif
-
-#ifndef _LaplacesDemonCpp_mcmcmwg_H
-#define _LaplacesDemonCpp_mcmcmwg_H
-
-#include <RcppArmadillo.h>
 
 RcppExport SEXP mcmcmwg(SEXP MODEL, SEXP DATA, SEXP ITERATIONS, SEXP STATUS, SEXP THINNING, SEXP SPECS, SEXP ACCEPTANCE, SEXP DEV, SEXP DIAGCOVAR, SEXP liv, SEXP MON, SEXP MO0, SEXP SCALEF, SEXP THINNED, SEXP TUNING);
 
