@@ -1,34 +1,13 @@
-#ifndef _LaplacesDemonCpp_is_positive_definite_H
-#define _LaplacesDemonCpp_is_positive_definite_H
+#ifndef _LaplacesDemonCpp_is_matrices_H
+#define _LaplacesDemonCpp_is_matrices_H
 
 #include <RcppArmadillo.h>
 
 RcppExport SEXP is_positive_definite(SEXP x);
 
-#endif
-
-#ifndef _LaplacesDemonCpp_is_positive_semidefinite_H
-#define _LaplacesDemonCpp_is_positive_semidefinite_H
-
-#include <RcppArmadillo.h>
-
 RcppExport SEXP is_positive_semidefinite(SEXP x);
 
-#endif
-
-#ifndef _LaplacesDemonCpp_is_symmetric_matrix_H
-#define _LaplacesDemonCpp_is_symmetric_matrix_H
-
-#include <RcppArmadillo.h>
-
 RcppExport SEXP is_symmetric_matrix(SEXP x);
-
-#endif
-
-#ifndef _LaplacesDemonCpp_tr_H
-#define _LaplacesDemonCpp_tr_H
-
-#include <RcppArmadillo.h>
 
 RcppExport SEXP tr(SEXP x);
 
