@@ -1,142 +1,87 @@
-#ifndef _LaplacesDemonCpp_dhalfcauchy_H
-#define _LaplacesDemonCpp_dhalfcauchy_H
+#ifndef _LaplacesDemonCpp_distributions_H
+#define _LaplacesDemonCpp_distributions_H
 
 #include <RcppArmadillo.h>
+
+/*------------------------------------------------------------------------/
+/ Half-Cauchy Distribution                                                /
+/------------------------------------------------------------------------*/
 
 RcppExport SEXP dhalfcauchy(SEXP X, SEXP SCALE, SEXP LOGD);
 
-#endif
+RcppExport SEXP rhalfcauchy(SEXP N, SEXP SCALE);
 
-#ifndef _LaplacesDemonCpp_dinvwishart_H
-#define _LaplacesDemonCpp_dinvwishart_H
-
-#include <RcppArmadillo.h>
+/*------------------------------------------------------------------------/
+/ Inverse Wishart Distribution                                            /
+/------------------------------------------------------------------------*/
 
 RcppExport SEXP dinvwishart(SEXP SIGMA, SEXP NU, SEXP s, SEXP LOGD);
 
-#endif
-
-#ifndef _LaplacesDemonCpp_dinvwishartc_H
-#define _LaplacesDemonCpp_dinvwishartc_H
-
-#include <RcppArmadillo.h>
+/*------------------------------------------------------------------------/
+/ Inverse Wishart Distribution (Cholesky Parameterization)                /
+/------------------------------------------------------------------------*/
 
 RcppExport SEXP dinvwishartc(SEXP u, SEXP NU, SEXP s, SEXP LOGD);
 
-#endif
+/*------------------------------------------------------------------------/
+/ Laplace Distribution                                                    /
+/------------------------------------------------------------------------*/
 
-#ifndef _LaplacesDemonCpp_dmvn_H
-#define _LaplacesDemonCpp_dmvn_H
+RcppExport SEXP dlaplace(SEXP X, SEXP LOCATION, SEXP SCALE, SEXP LOGD);
 
-#include <RcppArmadillo.h>
+RcppExport SEXP rlaplace(SEXP X, SEXP LOCATION, SEXP SCALE);
+
+/*------------------------------------------------------------------------/
+/ Multivariate Normal Distribution                                        /
+/------------------------------------------------------------------------*/
 
 RcppExport SEXP dmvn(SEXP X, SEXP MU, SEXP SIGMA, SEXP LOGD);
 
-#endif
+RcppExport SEXP rmvn(SEXP MU, SEXP SIGMA);
 
-#ifndef _LaplacesDemonCpp_dmvnc_H
-#define _LaplacesDemonCpp_dmvnc_H
-
-#include <RcppArmadillo.h>
+/*------------------------------------------------------------------------/
+/ Multivariate Normal Distribution (Cholesky Parameterization)            /
+/------------------------------------------------------------------------*/
 
 RcppExport SEXP dmvnc(SEXP X, SEXP MU, SEXP u, SEXP LOGD);
 
-#endif
+RcppExport SEXP rmvnc(SEXP MU, SEXP u);
 
-#ifndef _LaplacesDemonCpp_dmvnp_H
-#define _LaplacesDemonCpp_dmvnp_H
-
-#include <RcppArmadillo.h>
+/*------------------------------------------------------------------------/
+/ Multivariate Normal Distribution (Precision Parameterization)           /
+/------------------------------------------------------------------------*/
 
 RcppExport SEXP dmvnp(SEXP X, SEXP MU, SEXP OMEGA, SEXP LOGD);
 
-#endif
+RcppExport SEXP rmvnp(SEXP MU, SEXP OMEGA);
 
-#ifndef _LaplacesDemonCpp_dmvnpc_H
-#define _LaplacesDemonCpp_dmvnpc_H
-
-#include <RcppArmadillo.h>
+/*------------------------------------------------------------------------/
+/ Multivariate Normal Distribution (Precision-Cholesky Parameterization)  /
+/------------------------------------------------------------------------*/
 
 RcppExport SEXP dmvnpc(SEXP X, SEXP MU, SEXP u, SEXP LOGD);
 
-#endif
+RcppExport SEXP rmvnpc(SEXP MU, SEXP u);
 
-#ifndef _LaplacesDemonCpp_dwishart_H
-#define _LaplacesDemonCpp_dwishart_H
+/*------------------------------------------------------------------------/
+/ Multivariate t Distribution                                             /
+/------------------------------------------------------------------------*/
 
-#include <RcppArmadillo.h>
+RcppExport SEXP dmvt(SEXP X, SEXP MU, SEXP s, SEXP DF, SEXP LOGD);
+
+/*------------------------------------------------------------------------/
+/ Wishart Distribution                                                    /
+/------------------------------------------------------------------------*/
 
 RcppExport SEXP dwishart(SEXP OMEGA, SEXP NU, SEXP s, SEXP LOGD);
 
-#endif
-
-#ifndef _LaplacesDemonCpp_dwishartc_H
-#define _LaplacesDemonCpp_dwishartc_H
-
-#include <RcppArmadillo.h>
-
-RcppExport SEXP dwishartc(SEXP u, SEXP NU, SEXP s, SEXP LOGD);
-
-#endif
-
-#ifndef _LaplacesDemonCpp_rhalfcauchy_H
-#define _LaplacesDemonCpp_rhalfcauchy_H
-
-#include <RcppArmadillo.h>
-
-RcppExport SEXP rhalfcauchy(SEXP N, SEXP SCALE);
-
-#endif
-
-#ifndef _LaplacesDemonCpp_rmvn_H
-#define _LaplacesDemonCpp_rmvn_H
-
-#include <RcppArmadillo.h>
-
-RcppExport SEXP rmvn(SEXP MU, SEXP SIGMA);
-
-#endif
-
-#ifndef _LaplacesDemonCpp_rmvnp_H
-#define _LaplacesDemonCpp_rmvnp_H
-
-#include <RcppArmadillo.h>
-
-RcppExport SEXP rmvnp(SEXP MU, SEXP OMEGA);
-
-#endif
-
-#ifndef _LaplacesDemonCpp_rmvnc_H
-#define _LaplacesDemonCpp_rmvnc_H
-
-#include <RcppArmadillo.h>
-
-RcppExport SEXP rmvnc(SEXP MU, SEXP u);
-
-#endif
-
-#ifndef _LaplacesDemonCpp_rmvnpc_H
-#define _LaplacesDemonCpp_rmvnpc_H
-
-#include <RcppArmadillo.h>
-
-RcppExport SEXP rmvnpc(SEXP MU, SEXP u);
-
-#endif
-
-#ifndef _LaplacesDemonCpp_rwishart_H
-#define _LaplacesDemonCpp_rwishart_H
-
-#include <RcppArmadillo.h>
-
 RcppExport SEXP rwishart(SEXP NU, SEXP s);
 
-#endif
+/*------------------------------------------------------------------------/
+/ Wishart Distribution (Cholesky Parameterization)                        /
+/------------------------------------------------------------------------*/
 
-#ifndef _LaplacesDemonCpp_rwishartc_H
-#define _LaplacesDemonCpp_rwishartc_H
-
-#include <RcppArmadillo.h>
+RcppExport SEXP dwishartc(SEXP u, SEXP NU, SEXP s, SEXP LOGD);
 
 RcppExport SEXP rwishartc(SEXP NU, SEXP s);
 
