@@ -1,3 +1,5 @@
+2014-05-16 Distributions: Added dlaplace, rlaplace, and dmvt
+2014-05-16 partial: Changing back to R from C++ where it's faster
 2014-05-16 Distributions: Added dinvwishart, dinvwishartc, dmvnp, and dmvnpc
 2014-05-15 LaplacesDemon: Added .mcmcamwg and .mcmcmwg
 2014-05-15 Matrices: Added is.positive.semidefnite
